--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "bin": "./bin/cli.js",
   "scripts": {
     "start": "node src/server",
-    "dev": "nodemon src/server"
+    "dev": "node --watch src/server",
+    "test": "jest --detectOpenHandles",
+    "reset:migrate": "node ./src/tests/testMigrate.js",
+    "pretest": "npm run reset:migrate"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,7 @@
     "sequelize": "6.37.3"
   },
   "devDependencies": {
-    "nodemon": "3.1.3"
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
